--- a/slides/day-two.html
+++ b/slides/day-two.html
@@ -11,7 +11,7 @@
 
   <meta name="author" content="Cornelius Erfort">
   <meta name="dcterms.date" content="2025-05-17">
-  <title>Advanced Web Data Collection (Day 2)</title>
+  <title>Automated Web Data Collection (Day 2)</title>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -195,7 +195,7 @@
     <div class="slides">
 
 <section id="title-slide" class="quarto-title-block center">
-  <h1 class="title">Advanced Web Data Collection (Day 2)</h1>
+  <h1 class="title">Automated Web Data Collection (Day 2)</h1>
 
 <div class="quarto-title-authors">
 <div class="quarto-title-author">
