--- a/slides/day-two.html
+++ b/slides/day-two.html
@@ -245,7 +245,7 @@ Cornelius Erfort
 </div>
 </div>
 </div>
-<p><a href="https://cran.r-project.org/web/packages/RSelenium/RSelenium.pdf">https://cran.r-project.org/web/packages/RSelenium/RSelenium.pdf</a></p>
+<p><a href="https://cran.r-project.org/web/packages/RSelenium/RSelenium.pdf" class="uri">https://cran.r-project.org/web/packages/RSelenium/RSelenium.pdf</a></p>
 </div><div class="column" style="width:30%;">
 <p><img data-src="images/rselenium.png" style="width:50.0%"></p>
 </div></div>
@@ -368,7 +368,7 @@ Cornelius Erfort
 <span id="cb4-7"><a href=""></a>)</span>
 <span id="cb4-8"><a href=""></a><span class="fu">content</span>(resp)</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
-<p><a href="https://republicains.fr/actualites/">https://republicains.fr/actualites/</a></p>
+<p><a href="https://republicains.fr/actualites/" class="uri">https://republicains.fr/actualites/</a></p>
 </section>
 <section id="custom-headers-authentication-and-cookies" class="slide level2">
 <h2>Custom headers, authentication, and cookies</h2>
@@ -428,7 +428,7 @@ Cornelius Erfort
 <ul>
 <li>Use <code>httr</code> for APIs, or simple HTTP requests</li>
 <li>Use RSelenium for sites that require full browser automation (JS, logins, complex interactions)</li>
-<li>Often, you can use browser dev tools to find the real API and use <code>httr</code> instead of RSelenium (faster, more robust)</li>
+<li>Often, you can use browser dev tools to find the hidden API and use <code>httr</code> instead of RSelenium (faster, more robust)</li>
 </ul>
 </section>
 <section class="slide level2">
@@ -458,8 +458,8 @@ Cornelius Erfort
 </ul></li>
 </ul>
 </section>
-<section id="best-practices-feedback-error-handling-and-saving-data" class="slide level2">
-<h2>Best practices: Feedback, error handling, and saving data</h2>
+<section id="section" class="slide level2">
+<h2></h2>
 <ul>
 <li><strong>Example: Robust scraping loop with feedback and logging</strong></li>
 </ul>
@@ -482,7 +482,7 @@ Cornelius Erfort
 <span id="cb7-16"><a href=""></a>}</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
 </section>
-<section id="best-practices-feedback-error-handling-and-saving-data-1" class="slide level2">
+<section id="best-practices-feedback-error-handling-and-saving-data" class="slide level2">
 <h2>Best practices: Feedback, error handling, and saving data</h2>
 <ul>
 <li><p><strong>Example: Robust scraping loop with feedback and logging</strong></p></li>
@@ -495,7 +495,7 @@ Cornelius Erfort
 <hr></li>
 </ul>
 </section>
-<section id="best-practices-feedback-error-handling-and-saving-data-2" class="slide level2">
+<section id="best-practices-feedback-error-handling-and-saving-data-1" class="slide level2">
 <h2>Best practices: Feedback, error handling, and saving data</h2>
 <ul>
 <li><p><strong>Example: Robust scraping loop with feedback and logging</strong></p></li>
@@ -627,7 +627,7 @@ Cornelius Erfort
 <li><strong>Best practices:</strong>
 <ul>
 <li>Always test and review generated code before running</li>
-<li>Use LLMs as a coding assistant, not a replacement for understanding</li>
+<li>Be critical, it might only look like it works</li>
 <li>Combine LLM suggestions with browser dev tools and official documentation</li>
 <li>Ask for explanations, not just code</li>
 </ul></li>
@@ -644,13 +644,17 @@ Cornelius Erfort
 <li>Crawling: <code>firecrawl</code>, <code>crawlR</code></li>
 </ul>
 </section>
-<section class="slide level2">
-
-</section></section>
-<section>
-<section id="exercise-6-hands-on-project" class="title-slide slide level1 center">
-<h1>Exercise 6: Hands-on Project</h1>
-
+<section id="exercise-6-hands-on-project" class="slide level2">
+<h2>Exercise 6: Hands-on Project</h2>
+<ul>
+<li>Choose a project from the list or propose your own</li>
+<li>Projects can also include additional steps like (simple) text analysis, geocoding, or data visualization</li>
+<li>Don’t start off coding right away, but think about the steps you need to take</li>
+<li>Divide the project into smaller tasks</li>
+<li>Discuss your project with your neighbor</li>
+<li>For each step, start with a minimal example and make it work</li>
+<li>Then think about additional steps like feedback, saving, error handling</li>
+</ul>
 </section>
 <section class="slide level2">
 
