--- a/slides/day-two.html
+++ b/slides/day-two.html
@@ -207,6 +207,42 @@ Cornelius Erfort
 
   <p class="date">May 17, 2025</p>
 </section>
+<section id="recap-of-day-1" class="slide level2">
+<h2>Recap of Day 1</h2>
+<ul>
+<li><strong>HTML and Web Structure</strong>:
+<ul>
+<li>Understanding HTML and CSS.</li>
+<li>Learning how to extract data from web pages using CSS selectorss.</li>
+<li>Using <code>rvest</code> to scrape static web pages effectively.</li>
+</ul></li>
+</ul>
+</section>
+<section id="recap-of-day-1-1" class="slide level2">
+<h2>Recap of Day 1</h2>
+<ul>
+<li><strong>Web Scraping Techniques</strong>:
+<ul>
+<li>Introduction to web scraping and its applications.</li>
+<li>Practical exercises on scraping data from multiple pages using loops.</li>
+<li>Techniques for handling pagination URLs.</li>
+</ul></li>
+</ul>
+</section>
+<section id="recap-of-day-1-2" class="slide level2">
+<h2>Recap of Day 1</h2>
+<ul>
+<li><strong>APIs and Data Formats</strong>:
+<ul>
+<li>Understanding the role of APIs in data retrieval.</li>
+<li>Learning to work with JSON and other data formats.</li>
+<li>Using R to interact with APIs and parse JSON data.</li>
+</ul></li>
+</ul>
+</section>
+<section class="slide level2">
+
+</section>
 <section id="about-today" class="slide level2">
 <h2>About today</h2>
 <ul>
