--- a/slides/day-one.html
+++ b/slides/day-one.html
@@ -233,9 +233,9 @@ Cornelius Erfort
 <h2>Research Examples Using Web Data Collection</h2>
 <div class="small-font">
 <ul>
-<li><strong>Siegel, Alexandra A., and Vivienne Badaan.</strong> “#No2Sectarianism: Experimental Approaches to Reducing Sectarian Hate Speech Online.” <em>American Political Science Review</em> 114, no. 3 (2020): 837–55. <a href="https://doi.org/10.1017/S0003055420000283">https://doi.org/10.1017/S0003055420000283</a></li>
+<li><strong>Siegel, Alexandra A., and Vivienne Badaan.</strong> “#No2Sectarianism: Experimental Approaches to Reducing Sectarian Hate Speech Online.” <em>American Political Science Review</em> 114, no. 3 (2020): 837–55. <a href="https://doi.org/10.1017/S0003055420000283" class="uri">https://doi.org/10.1017/S0003055420000283</a></li>
 <li><strong>Mitts, Tamar.</strong> “Banned: How Deplatforming Extremists Mobilizes Hate in the Dark Corners of the Internet.” <em>Working Paper</em> (2021). <a href="https://www.dropbox.com/s/iatnxn5gtq48fxu/Mitts_banned.pdf?dl=0">PDF</a></li>
-<li><strong>Boas, Taylor C., and F. Daniel Hidalgo.</strong> “Controlling the Airwaves: Incumbency Advantage and Community Radio in Brazil.” <em>American Journal of Political Science</em> 55, no. 4 (2011): 869–85. <a href="https://doi.org/10.1111/j.1540-5907.2011.00532.x">https://doi.org/10.1111/j.1540-5907.2011.00532.x</a></li>
+<li><strong>Boas, Taylor C., and F. Daniel Hidalgo.</strong> “Controlling the Airwaves: Incumbency Advantage and Community Radio in Brazil.” <em>American Journal of Political Science</em> 55, no. 4 (2011): 869–85. <a href="https://doi.org/10.1111/j.1540-5907.2011.00532.x" class="uri">https://doi.org/10.1111/j.1540-5907.2011.00532.x</a></li>
 </ul>
 </div>
 </section>
@@ -243,9 +243,9 @@ Cornelius Erfort
 <h2>Research Examples (cont.)</h2>
 <div class="small-font">
 <ul>
-<li><strong>Bischof, Daniel, and Thomas Kurer.</strong> “Place-Based Campaigning: The Political Impact of Real Grassroots Mobilization.” <em>The Journal of Politics</em> (2023). <a href="https://doi.org/10.1086/723985">https://doi.org/10.1086/723985</a></li>
-<li><strong>Box-Steffensmeier, Janet M., Benjamin W. Campbell, Andrew W. Podob, and Seth J. Walker.</strong> “I Get By with a Little Help from My Friends: Leveraging Campaign Resources to Maximize Congressional Power.” <em>American Journal of Political Science</em> 64, no. 4 (2020): 1017–33. <a href="https://doi.org/10.1111/ajps.12528">https://doi.org/10.1111/ajps.12528</a></li>
-<li><strong>Motolina, Lucia.</strong> “Electoral Accountability and Particularistic Legislation: Evidence from an Electoral Reform in Mexico.” <em>American Political Science Review</em> 115, no. 1 (2021): 97–113. <a href="https://doi.org/10.1017/S0003055420000672">https://doi.org/10.1017/S0003055420000672</a></li>
+<li><strong>Bischof, Daniel, and Thomas Kurer.</strong> “Place-Based Campaigning: The Political Impact of Real Grassroots Mobilization.” <em>The Journal of Politics</em> (2023). <a href="https://doi.org/10.1086/723985" class="uri">https://doi.org/10.1086/723985</a></li>
+<li><strong>Box-Steffensmeier, Janet M., Benjamin W. Campbell, Andrew W. Podob, and Seth J. Walker.</strong> “I Get By with a Little Help from My Friends: Leveraging Campaign Resources to Maximize Congressional Power.” <em>American Journal of Political Science</em> 64, no. 4 (2020): 1017–33. <a href="https://doi.org/10.1111/ajps.12528" class="uri">https://doi.org/10.1111/ajps.12528</a></li>
+<li><strong>Motolina, Lucia.</strong> “Electoral Accountability and Particularistic Legislation: Evidence from an Electoral Reform in Mexico.” <em>American Political Science Review</em> 115, no. 1 (2021): 97–113. <a href="https://doi.org/10.1017/S0003055420000672" class="uri">https://doi.org/10.1017/S0003055420000672</a></li>
 </ul>
 </div>
 </section>
@@ -253,8 +253,8 @@ Cornelius Erfort
 <h2>Research Examples (cont.)</h2>
 <div class="small-font">
 <ul>
-<li><strong>Sances, Michael W.</strong> “Defund My Police? The Effect of George Floyd’s Murder on Support for Local Police Budgets.” <em>The Journal of Politics</em> (2023). <a href="https://doi.org/10.1086/723979">https://doi.org/10.1086/723979</a></li>
-<li><strong>Lutscher, Philipp M.</strong> “Hot Topics: Denial-of-Service Attacks on News Websites in Autocracies.” <em>Political Science Research and Methods</em> (2021): 1–16. <a href="https://doi.org/10.1017/psrm.2021.68">https://doi.org/10.1017/psrm.2021.68</a></li>
+<li><strong>Sances, Michael W.</strong> “Defund My Police? The Effect of George Floyd’s Murder on Support for Local Police Budgets.” <em>The Journal of Politics</em> (2023). <a href="https://doi.org/10.1086/723979" class="uri">https://doi.org/10.1086/723979</a></li>
+<li><strong>Lutscher, Philipp M.</strong> “Hot Topics: Denial-of-Service Attacks on News Websites in Autocracies.” <em>Political Science Research and Methods</em> (2021): 1–16. <a href="https://doi.org/10.1017/psrm.2021.68" class="uri">https://doi.org/10.1017/psrm.2021.68</a></li>
 <li><strong>Erfort, Cornelius, Klüver, Heike, and Stötzer, Lukas F.</strong> “The PARTYPRESS Database: A new Comparative Database of Parties’ Press Releases.” <em>Research and Politics</em> (2023).</li>
 </ul>
 </div>
@@ -263,9 +263,9 @@ Cornelius Erfort
 <h2>Research Examples (cont.)</h2>
 <div class="small-font">
 <ul>
-<li><strong>Morris, Kevin.</strong> “Turnout and Amendment Four: Mobilizing Eligible Voters Close to Formerly Incarcerated Floridians.” <em>American Political Science Review</em> 115, no. 3 (2021): 805–20. <a href="https://doi.org/10.1017/S0003055421000253">https://doi.org/10.1017/S0003055421000253</a></li>
-<li><strong>Gessler, Theresa, &amp; Hunger, Sophia.</strong> “How the refugee crisis and radical right parties shape party competition on immigration.” <em>Political Science Research and Methods</em>, 10(3), 524-544 (2022). <a href="https://doi.org/10.1017/psrm.2021.64">https://doi.org/10.1017/psrm.2021.64</a></li>
-<li><strong>Stukal, Denis, Sergey Sanovich, Richard Bonneau, and Joshua A. Tucker.</strong> “Why Botter: How Pro-Government Bots Fight Opposition in Russia.” <em>American Political Science Review</em> 116, no. 3 (2022): 843–57. <a href="https://doi.org/10.1017/S0003055421001507">https://doi.org/10.1017/S0003055421001507</a></li>
+<li><strong>Morris, Kevin.</strong> “Turnout and Amendment Four: Mobilizing Eligible Voters Close to Formerly Incarcerated Floridians.” <em>American Political Science Review</em> 115, no. 3 (2021): 805–20. <a href="https://doi.org/10.1017/S0003055421000253" class="uri">https://doi.org/10.1017/S0003055421000253</a></li>
+<li><strong>Gessler, Theresa, &amp; Hunger, Sophia.</strong> “How the refugee crisis and radical right parties shape party competition on immigration.” <em>Political Science Research and Methods</em>, 10(3), 524-544 (2022). <a href="https://doi.org/10.1017/psrm.2021.64" class="uri">https://doi.org/10.1017/psrm.2021.64</a></li>
+<li><strong>Stukal, Denis, Sergey Sanovich, Richard Bonneau, and Joshua A. Tucker.</strong> “Why Botter: How Pro-Government Bots Fight Opposition in Russia.” <em>American Political Science Review</em> 116, no. 3 (2022): 843–57. <a href="https://doi.org/10.1017/S0003055421001507" class="uri">https://doi.org/10.1017/S0003055421001507</a></li>
 </ul>
 </div>
 </section>
@@ -300,7 +300,7 @@ Cornelius Erfort
 </div>
 </div>
 </div>
-<p><a href="https://www.wiley.com/en-us/Automated+Data+Collection+with+R%3A+A+Practical+Guide+to+Web+Scraping+and+Text+Mining-p-9781118834817">https://www.wiley.com/en-us/Automated+Data+Collection+with+R%3A+A+Practical+Guide+to+Web+Scraping+and+Text+Mining-p-9781118834817</a></p>
+<p><a href="https://www.wiley.com/en-us/Automated+Data+Collection+with+R%3A+A+Practical+Guide+to+Web+Scraping+and+Text+Mining-p-9781118834817" class="uri">https://www.wiley.com/en-us/Automated+Data+Collection+with+R%3A+A+Practical+Guide+to+Web+Scraping+and+Text+Mining-p-9781118834817</a></p>
 </div><div class="column" style="width:40%;">
 <p><img data-src="images/munzert.jpg" style="width:90.0%"></p>
 </div></div>
@@ -319,7 +319,7 @@ Cornelius Erfort
 </div>
 </div>
 </div>
-<p><a href="https://r4ds.had.co.nz/">https://r4ds.had.co.nz/</a></p>
+<p><a href="https://r4ds.had.co.nz/" class="uri">https://r4ds.had.co.nz/</a></p>
 </div><div class="column" style="width:40%;">
 <p><img data-src="images/wickham.jpg" style="width:90.0%"></p>
 </div></div>
